# easyDB

./: .gitignore  README.md  pyproject.toml
easyDB/: __init__.py  db.py
